app/styles/film.less
/* film */

.film {
	overflow-x: hidden;

	/* poster, title, year, status*/
	.f-details {
		position: relative;

		.poster {
			.size(~"calc(100vh - 80px)"; 100%);
			.size(450px; 100%);

			background-position: top center;
			background-repeat: no-repeat;
			background-size: cover;

			/*-webkit-filter: grayscale(1);
			filter: grayscale(100%);*/
		}

		.no-poster {
			.size(~"calc(100vh - 80px)"; 100%);
			.size(450px; 100%);
			.column(@center; @center);

			background: @purple;

			h3 {
				color: white;
			}

			.logo {
				.size(86px; 86px);

				margin: 0 0 100px 0;
			}
		}

		.f-main-cont {
			.box(30px 20px 60px 20px);
			.row(@spread; @bottom);
			height: ~"calc(100vh - 80px)";
			.size(450px; 100%);

			background: linear-gradient(
				rgba(0, 0, 0, 0.4),
				rgba(64, 111, 192, 1));
			background-blend-mode: multiply;
			margin: 0;

			position: absolute;
			bottom: 0;
			left: 0;

			&:before {
				.size(0; 0);

				display: block;
				content: "";
				border-bottom: 75px solid @lightpurple;
				border-left: 100vw solid transparent;

				position: absolute;
				bottom: 0;
				left: 0;
			}

			.cont {
				width: 100%;
				.row(@spread);
			}

			.title {
				.font(700; 24px);
				color: white;
				margin: 0 50px 0 0;
				text-transform: none;
			}

			.year {
				.font(@s: 18px);

				color: white;
				margin: 0;
			}

			.type-duration {
				.font(@w: bold);

				color: white;
				padding: 15px 0 0 0;
				margin: 0 0 0 0;
				text-transform: uppercase;
			}

			&.no-poster-main-cont {
				.size(450px; 100%);


				background: linear-gradient(
					rgba(64, 111, 196, 1),
					@lightpurple);

				background: linear-gradient(
					rgba(0, 0, 0, 0.2),
					rgba(0, 0, 0, 1));
			}
		}

		.f-status {
			min-height: 42px;
			min-width: 42px;
			cursor: pointer;

			.icon {
				.size(30px; 30px);
			}
		}		
	}

	/* director, wtiter, actors, synopsis */
	.f-more-info {
		.box(30px 20px 20px 20px);

		background: @lightpurple;
		position: relative;

		&:after {
			.size(0; 0);

			display: block;
			content: "";
			border-top: 30px solid @lightpurple;
			border-left: 100vw solid transparent;
			overflow: hidden;

			position: absolute;
			bottom: -30px;
			left: 0;
		}

		h3 {
			color: white;
			padding: 5px 0;
		}

		h4 {
			.font(bold; 10px);

			color: white;
			font-size: 16px;
			font-weight: bold;
			margin: 0;
			padding: 5px 0;
			
			span {
				.font(normal; 16px);

				margin: 0 6px 0 0;
			}
		}


		.f-synopsis-cont {
			.box(20px 0);

			background: @lightpurple;

			h3 {
				color: white;
			}

			input {

				&:checked ~ .synopsis-text {
					display: block;
				}
			}

			.synopsis-text {
				color: white;
				display: none;
				margin: 10px 0;
			}
		}

		.recommend-cont {
			margin: 20px 0;

			.recommend {
				display: block;
				margin: 0 auto;
			}
		}
	}

	.peek {
		padding: 30px 0;

		.watched-by,
		.watchlisted-by {
			padding: 20px 20px;
		}

		li {
			margin: 0 22px; 
		}

		.comments {

			label {
				padding: 0 20px;
			}
		}
	}

	.comments {

		.comments-list {
			.column;

			.text {
				color: @grey;
			}

			padding: 0;

			li {
				padding: 15px 0 15px 15px;
			}

			button {
				.naughty(column; @center);
			}

			.comment-form {
				.column;

				margin: 0 20px;
				width: ~"calc(100% - 40px)";

				p {
					margin: 20px 0;
					width: 100%;
				}

				textarea {
					.box(9px 15px);

					border: 2px solid @lightpurple;
					border-radius: 10px;
					outline: none;
					resize: none;
					width: 100%;

					&::-moz-placeholder {
						color: #999;
					}

					&::-webkit-input-placeholder  {
						color: #999;
					}
				}

				button {
					.naughty(column; @right);
				}
			}
		}
	}
}

